--- a/index.yaml
+++ b/index.yaml
@@ -9,3 +9,16 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+# Used 26 times in query history.
+- kind: Topic
+  properties:
+  - name: forum
+  - name: created_on
+
+# Used once in query history.
+- kind: Topic
+  properties:
+  - name: forum
+  - name: created_on
+    direction: desc
