switch from using Topic key to just key id, to shorten visible urls; add user_name/user_email/user_homepage properties to Post class

--- a/index.yaml
+++ b/index.yaml
@@ -10,7 +10,7 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Unused in query history -- copied from input.
+# Used once in query history.
 - kind: Post
   properties:
   - name: topic
@@ -23,7 +23,7 @@ indexes:
   - name: forum
   - name: created_on
 
-# Unused in query history -- copied from input.
+# Used 2 times in query history.
 - kind: Topic
   properties:
   - name: forum
