added javascript from fruitshow as fofou.js; use it for roll-overs on topi.html

--- a/app.yaml
+++ b/app.yaml
@@ -8,6 +8,10 @@ handlers:
   static_files: fofou.css
   upload: fofou.css
 
+- url: /fofou.js
+  static_files: fofou.js
+  upload: fofou.jss
+
 - url: /graphics
   static_dir: graphics
 
