--- a/index.yaml
+++ b/index.yaml
@@ -10,7 +10,7 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Used 16 times in query history.
+# Used 26 times in query history.
 - kind: Post
   properties:
   - name: topic
@@ -29,9 +29,17 @@ indexes:
   - name: forum
   - name: created_on
 
-# Used 33 times in query history.
+# Used 48 times in query history.
 - kind: Topic
   properties:
   - name: forum
+  - name: created_on
+    direction: desc
+
+# Used once in query history.
+- kind: Topic
+  properties:
+  - name: forum
+  - name: is_deleted
   - name: created_on
     direction: desc
