properly detect delted posts/topic in fruitshow import; change the import url from /importtopic to /importfruitshow

--- a/index.yaml
+++ b/index.yaml
@@ -13,6 +13,13 @@ indexes:
 # Unused in query history -- copied from input.
 - kind: Post
   properties:
+  - name: is_deleted
+  - name: topic
+  - name: created_on
+
+# Unused in query history -- copied from input.
+- kind: Post
+  properties:
   - name: topic
   - name: created_on
 
@@ -29,7 +36,7 @@ indexes:
   - name: forum
   - name: created_on
 
-# Used 2 times in query history.
+# Used 3 times in query history.
 - kind: Topic
   properties:
   - name: forum
