templates cannot be in a directory declared static in app.yaml, so move the files that are actually served via http to static directory and undeclare skins a static dir

--- a/app.yaml
+++ b/app.yaml
@@ -4,8 +4,8 @@ runtime: python
 api_version: 1
 
 handlers:
-- url: /skins
-  static_dir: skins
+- url: /static
+  static_dir: static
 
 - url: /img
   static_dir: img
