--- a/index.yaml
+++ b/index.yaml
@@ -10,7 +10,7 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Used 16 times in query history.
+# Unused in query history -- copied from input.
 - kind: Post
   properties:
   - name: forum
@@ -18,7 +18,7 @@ indexes:
   - name: created_on
     direction: desc
 
-# Used 7 times in query history.
+# Used 3 times in query history.
 - kind: Post
   properties:
   - name: forum
@@ -32,7 +32,7 @@ indexes:
   - name: topic
   - name: created_on
 
-# Used 50 times in query history.
+# Unused in query history -- copied from input.
 - kind: Post
   properties:
   - name: topic
@@ -51,14 +51,14 @@ indexes:
   - name: forum
   - name: created_on
 
-# Used 48 times in query history.
+# Used 11 times in query history.
 - kind: Topic
   properties:
   - name: forum
   - name: created_on
     direction: desc
 
-# Used 2 times in query history.
+# Unused in query history -- copied from input.
 - kind: Topic
   properties:
   - name: forum
