use www.fofou.org and redirecto fofou.org => www.fofou.org

--- a/go/scripts/nginx.conf
+++ b/go/scripts/nginx.conf
@@ -1,4 +1,9 @@
 server {
+	server_name fofou.org;
+	return 301 $scheme://www.fofou.org$request_uri;
+}
+
+server {
 	listen          80;
 	server_name     test.fofou.org www.fofou.org;
 	access_log  	/var/log/nginx/fofou/access.log;
