--- a/go/scripts/nginx.conf
+++ b/go/scripts/nginx.conf
@@ -1,11 +1,16 @@
 server {
 	server_name fofou.org;
-	return 301 $scheme://www.fofou.org$request_uri;
+	return 301 $scheme://forums.fofou.org$request_uri;
+}
+
+server {
+	server_name www.fofou.org;
+	return 301 $scheme://forums.fofou.org$request_uri;
 }
 
 server {
 	listen          80;
-	server_name     test.fofou.org www.fofou.org;
+	server_name     test.fofou.org forums.fofou.org;
 	access_log  	/var/log/nginx/fofou/access.log;
 	error_log  		/var/log/nginx/fofou/error.log;
 
