add ability to ban based on words in the message

--- a/go/forums/sumatrapdf_config.json
+++ b/go/forums/sumatrapdf_config.json
@@ -6,5 +6,6 @@
 	"DataDir":"SumatraPDF",
 	"AdminTwitterUser":"kjk",
 	"Disabled":false,
-	"BannedIps": ["^118\\.248\\..*"]
+	"BannedIps": ["^118\\.248\\..*"],
+	"BannedWords": ["ebookconverter.com"]
 }
