--- a/go/forums/sumatrapdf_config.json
+++ b/go/forums/sumatrapdf_config.json
@@ -7,5 +7,5 @@
 	"AdminTwitterUser":"kjk",
 	"Disabled":false,
 	"BannedIps": ["^118\\.248\\..*"],
-	"BannedWords": ["ebookconverter.com"]
+	"BannedWords": ["ebookconverter.com", "epubconverter.com"]
 }
