--- a/go/scripts/nginx.conf
+++ b/go/scripts/nginx.conf
@@ -1,3 +1,8 @@
+# This file goes into /etc/nginx/sites-available/fofou
+
+# fixes error: "could not build the server_names_hash, you should increase server_names_hash_bucket_size: 32"
+server_names_hash_bucket_size  64;
+
 server {
 	server_name fofou.org;
 	return 301 $scheme://forums.fofou.org$request_uri;
@@ -10,7 +15,7 @@ server {
 
 server {
 	listen          80;
-	server_name     test.fofou.org forums.fofou.org;
+	server_name     test.fofou.org forums.fofou.org do-forum.fofou.org;
 	access_log  	/var/log/nginx/fofou/access.log;
 	error_log  		/var/log/nginx/fofou/error.log;
 
@@ -18,7 +23,7 @@ server {
 		proxy_pass        http://localhost:5010;
 
 		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP  $remote_addr;  
+		proxy_set_header X-Real-IP  $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
 		# because http://mikkel.hoegh.org/blog/2012/07/24/varnish-as-reverse-proxy-with-nginx-as-web-server-and-ssl-terminator/ does that
